--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,3 +1,8 @@
+<style media="screen">
+  .count {
+    width: 10px;
+  }
+</style>
 <body>
   <h1><%= @item.title %></h1>
   <h3><%= @item.body %></h3>
@@ -8,9 +13,27 @@
   <div class="">
     <%= form_for @item, url: :orders, method: :post do |f|%>
         <%= f.hidden_field :id%>
-        <input type="number" name="quantity">
+        <input type="number" name="quantity" id="count">
         <%= f.submit value: "장바구니"%>
       <% end %>
+  </div>
+  <div class="">
+    <%= form_for @review, url: :reviews, method: :post do |f|%>
+        <%= f.hidden_field :item_id, value: @item.id%>
+        <%= f.text_field :body %>
+        <%= f.submit value: "댓글 달기"%>
+      <% end %>
+  </div>
+  <div class="">
+    <table>
+      <% @item_reviews.each do |review| %>
+      <tr>
+        <td><%= review.user.name %></td>
+        <td><%= review.body %></td>
+        <td><%= link_to "삭제", review_path(review.id), method: :delete%></td>
+      </tr>
+    <% end %>
+    </table>
   </div>
 </body>
 
