--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -22,12 +22,12 @@
   </table>
   <%= form_for @order, url: :order_order_items, method: :post do |f|%>
       <%= f.hidden_field :id%>
-      <%= f.text_field :name, placeholder: "이름" %>
-      <%= f.text_field :phone, placeholder: "전화번호" %>
-      <%= f.text_field :country, placeholder: "국가" %>
-      <%= f.text_field :zipcode, placeholder: "우편번호" %>
-      <%= f.text_field :address1, placeholder: "주소" %>
-      <%= f.text_field :address2, placeholder: "나머지 주소" %>
+      <%= f.text_field :name, placeholder: "이름", required: true %>
+      <%= f.text_field :phone, placeholder: "전화번호", required: true %>
+      <%= f.text_field :country, placeholder: "국가", required: true %>
+      <%= f.text_field :zipcode, placeholder: "우편번호", required: true %>
+      <%= f.text_field :address1, placeholder: "주소", required: true %>
+      <%= f.text_field :address2, placeholder: "나머지 주소", required: true %>
       <%= f.text_field :note, placeholder: "배송 시 요청사항" %><br>
       <p>총 가격 <%= sum %>원</p>
       <%= f.submit value: "주문하기"%>
