--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,16 +5,18 @@
 
   <table>
     <tr>
+      <th></th>
       <th>상품</th>
       <th>설명</th>
       <th>가격</th>
     </tr>
     <% @items.each do |item| %>
-    <tr>
-      <td><%= link_to item.title, item_path(item) %></td>
-      <td><%= item.body %></td>
-      <td><%= item.price %>원</td>
-    </tr>
+      <tr>
+        <td><%= image_tag item.avatar.url, style: "width:50px; height:50px"%></td>
+        <td><%= link_to item.title, item_path(item) %></td>
+        <td><%= item.body %></td>
+        <td><%= item.price %>원</td>
+      </tr>
     <% end %>
   </table>
 </div>
