--- a/app/views/wishlists/index.html.erb
+++ b/app/views/wishlists/index.html.erb
@@ -2,6 +2,9 @@
   <% @wishlist.each do |wishlist| %>
   <tr>
     <td>
+      <%= image_tag wishlist.item.avatar.url, style: "width:50px; height:50px"%>
+    </td>
+    <td>
       <%= link_to  wishlist.item.title, item_path(wishlist.item.id)%>
     </td>
     <td>
